--- a/Inha_WinAPI/Inha_WinAPI.vcxproj
+++ b/Inha_WinAPI/Inha_WinAPI.vcxproj
@@ -140,13 +140,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DrawGrid.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Inha_WinAPI.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Inha_WinAPI.cpp" />
+    <ClCompile Include="01.Chatting box.cpp" />
+    <ClCompile Include="02.Draw a grid.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Inha_WinAPI.rc" />
