--- a/Inha_WinAPI/Inha_WinAPI.vcxproj
+++ b/Inha_WinAPI/Inha_WinAPI.vcxproj
@@ -145,10 +145,12 @@
     <ClInclude Include="Inha_WinAPI.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="DrawCircle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="01.Chatting box.cpp" />
     <ClCompile Include="02.Draw a grid.cpp" />
+    <ClCompile Include="03.Draw a circle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Inha_WinAPI.rc" />
